--- a/index.html
+++ b/index.html
@@ -1,26 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title><link rel="stylesheet" href="styles/index.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles/index.css">
 </head>
+
 <body>
     <header>
         <div class="parent1">
             <div class="child11">
                 <h2 class="c11t">Let's make <br> beautiful flowers a <br> part of your life.</h2>
-                <p class="c11p">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout. The point of using Lorem Ipsum is <br> that it has a more-or-less normal distribution of letters.</p>
+                <p class="c11p">It is a long established fact that a reader will be distracted by the readable <br>
+                    content of a page when looking at its layout. The point of using Lorem Ipsum is <br> that it has a
+                    more-or-less normal distribution of letters.</p>
                 <button class="pbtn">Shop Now</button>
             </div>
             <div class="child12"><img src="Flower Asset/pngwing 10.png" alt="Image of a flower"></div>
         </div>
     </header>
     <main>
-
+        <nav class="n1">
+            <h3 class="nt">Our Featured Flowers</h3>
+            <p class="np">It is a long established fact that a reader will be distracted by the readable <br> content of
+                a page when looking at its layout.</p>
+        </nav>
+        <div class="boss">
+            <div class="hand1">
+                <div>
+                    <img class="b1" src="Flower Asset/pngwing 6.png" alt="">
+                </div>
+                <div>
+                    <a class="x" href="">Pink Flower Tree</a>
+                </div>
+            </div>
+            <div class="hand1">
+                <div>
+                    <div>
+                        <img class="b2" src="Flower Asset/pngwing 5.png" alt="">
+                    </div>
+                    <div>
+                        <a class="x" href="">Flowers For Gift</a>
+                    </div>
+                </div>
+            </div>
+            <div class="hand1">
+                <div>
+                    <img class="b3" src="Flower Asset/pngwing 7.png" alt="">
+                </div>
+                <div>
+                    <a class="x" href="">Yellow Flower Tree</a>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
