--- a/index.html
+++ b/index.html
@@ -55,6 +55,26 @@
                 </div>
             </div>
         </div>
+        <div class="boss2">
+            <div class="hand2">
+                <h3 class="nt">Hot Deal ! Sale Up To 25% <span>Off</span></h3>
+                <p class="np">It is a long established fact that a reader will be distracted by the readable <br>
+                    content of a page when looking at its layout.</p>
+                <button class="pbtn">Sign Up</button>
+            </div>
+            <div class=""><img src="Flower Asset/pngwing 8.png" alt="Image of a flower"></div>
+        </div>
+        <div class="n2">
+            <h3 class="nt">Instagram</h3>
+            <p class="np">It is a long established fact that a reader will be distracted by the readable <br> content of
+                a page when looking at its layout.</p>
+        </div>
+        <div class="boss3">
+            <div><img src="Flower Asset/Flower 01.png" alt="Image of a flower"></div>
+            <div><img src="Flower Asset/Rectangle 4.png" alt="Image of a flower"></div>
+            <div><img src="Flower Asset/Rectangle 5.png" alt="Image of a flower"></div>
+            <div><img src="Flower Asset/Rectangle 6.png" alt="image of a flower"></div>
+        </div>
     </main>
     <footer>
 
