--- a/index.html
+++ b/index.html
@@ -75,6 +75,18 @@
             <div><img src="Flower Asset/Rectangle 5.png" alt="Image of a flower"></div>
             <div><img src="Flower Asset/Rectangle 6.png" alt="image of a flower"></div>
         </div>
+        <div class="sub">
+            <h3 class="subt">Get The Latest Deals</h3>
+            <p class="subp">$30 coupon for first shopping</p>
+            <div class="boss4">
+                <div>
+                    <input class="inp1" type="email" name="" id="" placeholder="Enter your email here....">
+                </div>
+                <div>
+                    <button class="pbtn2">Subscribe</button>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
 
