--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FlowerShop.com</title>
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="shortcut icon" href="Flower Asset/Group 58.png" type="image/x-icon">
 </head>
 
 <body>
@@ -89,6 +90,12 @@
         </div>
     </main>
     <footer>
+        <div class="end">
+            <h3 class="ft"><span>Flower</span>Shop</h3>
+            <p class="fp">It is a long established fact that a reader will be distracted by the readable <br> content of
+                a page when looking at its layout.</p>
+            <p class="fp2">&copy;2020-2023, FlowerShop.com. All rights reserved.</p>
+        </div>
 
     </footer>
 </body>
