--- a/index.html
+++ b/index.html
@@ -11,18 +11,21 @@
 
 <body>
     <header>
+        
+    </header>
+    <main>
         <div class="parent1">
-            <div class="child11">
+            <div>
                 <h2 class="c11t">Let's make <br> beautiful flowers a <br> part of your life.</h2>
                 <p class="c11p">It is a long established fact that a reader will be distracted by the readable <br>
                     content of a page when looking at its layout. The point of using Lorem Ipsum is <br> that it has a
                     more-or-less normal distribution of letters.</p>
                 <button class="pbtn">Shop Now</button>
             </div>
-            <div class="child12"><img src="Flower Asset/pngwing 10.png" alt="Image of a flower"></div>
+            <div>
+                <img src="Flower Asset/pngwing 10.png" alt="Image of a flower">
+            </div>
         </div>
-    </header>
-    <main>
         <nav class="n1">
             <h3 class="nt">Our Featured Flowers</h3>
             <p class="np">It is a long established fact that a reader will be distracted by the readable <br> content of
@@ -63,7 +66,9 @@
                     content of a page when looking at its layout.</p>
                 <button class="pbtn">Sign Up</button>
             </div>
-            <div class=""><img src="Flower Asset/pngwing 8.png" alt="Image of a flower"></div>
+            <div>
+                <img src="Flower Asset/pngwing 8.png" alt="Image of a flower">
+            </div>
         </div>
         <div class="n2">
             <h3 class="nt">Instagram</h3>
