--- a/index.html
+++ b/index.html
@@ -7,11 +7,22 @@
     <title>FlowerShop.com</title>
     <link rel="stylesheet" href="styles/index.css">
     <link rel="shortcut icon" href="Flower Asset/Group 58.png" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/b6443437a4.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
-        
+        <nav class="extra">
+            <div>
+                <h5 class="extrat">Welcome To<br><span class="extran"><span class="span">Flower</span>Shop.com</span>
+                </h5>
+            </div>
+            <div>
+                <button class="pbtn"><i class="fa-solid fa-house"></i> Home</button>
+                <button class="pbtn"><i class="fa-solid fa-fire"></i> Offers</button>
+                <button class="pbtn"><i class="fa-solid fa-gear"></i> Settings</button>
+            </div>
+        </nav>
     </header>
     <main>
         <div class="parent1">
@@ -20,7 +31,7 @@
                 <p class="c11p">It is a long established fact that a reader will be distracted by the readable <br>
                     content of a page when looking at its layout. The point of using Lorem Ipsum is <br> that it has a
                     more-or-less normal distribution of letters.</p>
-                <button class="pbtn">Shop Now</button>
+                <button class="pbtn"><i class="fa-solid fa-cart-shopping"></i> Shop Now</button>
             </div>
             <div>
                 <img src="Flower Asset/pngwing 10.png" alt="Image of a flower">
@@ -61,10 +72,10 @@
         </div>
         <div class="boss2">
             <div class="hand2">
-                <h3 class="nt">Hot Deal ! Sale Up To 25% <span>Off</span></h3>
+                <h3 class="nt">Hot Deal ! Sale Up To 25% <span class="span">Off</span></h3>
                 <p class="np">It is a long established fact that a reader will be distracted by the readable <br>
                     content of a page when looking at its layout.</p>
-                <button class="pbtn">Sign Up</button>
+                <button class="pbtn"><i class="fa-solid fa-user-plus"></i> Sign Up</button>
             </div>
             <div>
                 <img src="Flower Asset/pngwing 8.png" alt="Image of a flower">
@@ -89,19 +100,18 @@
                     <input class="inp1" type="email" name="" id="" placeholder="Enter your email here....">
                 </div>
                 <div>
-                    <button class="pbtn2">Subscribe</button>
+                    <button class="pbtn2"><i class="fa-solid fa-handshake"></i> Subscribe</button>
                 </div>
             </div>
         </div>
     </main>
     <footer>
         <div class="end">
-            <h3 class="ft"><span>Flower</span>Shop</h3>
+            <h3 class="ft"><span class="span">Flower</span>Shop</h3>
             <p class="fp">It is a long established fact that a reader will be distracted by the readable <br> content of
                 a page when looking at its layout.</p>
             <p class="fp2">&copy;2020-2023, FlowerShop.com. All rights reserved.</p>
         </div>
-
     </footer>
 </body>
 
